--- a/static/css/safari_reader.css
+++ b/static/css/safari_reader.css
@@ -1,6 +1,7 @@
 body { 
     font-family: Palatino, Georgia, Times, 'Times New Roman', serif;
-    font-size: 17px;
+    /* font-size: 17px; */
+    font-size: 14px;
     line-height: 1.4;
     padding-bottom: 85px;
 }
