--- a/static/css/zw-base.css
+++ b/static/css/zw-base.css
@@ -53,3 +53,7 @@ blockquote {
 
 a { color: #000; text-decoration: none; border-bottom: 1px dashed #ccc; }
 a:hover { color: #666; text-decoration: underline; border-bottom: 0px; }
+
+span .hide { display: none; }
+
+footer { text-align: center; font-size: 12px; color: #666; }
