Auto hide quick links('~recent', '~all', '~settings') in specify page view.

--- a/zbox_wiki/static/css/zw-base.css
+++ b/zbox_wiki/static/css/zw-base.css
@@ -4,13 +4,13 @@
     padding-bottom : 30px;
 }
 
-#quicklinks, 
+#quick_links, 
 #searchbox, 
 #toolbox { text-align : right; }
 
 #searchbox { position : fixed; top : 35px; right : 20px;  }
 
-#quicklinks a, #toolbox a { margin-left : 10px ; font-size : 14px; padding : 3px; }
+#quick_links a, #toolbox a { margin-left : 10px ; font-size : 14px; padding : 3px; }
 
 #title { margin-top : 40px; }
 #content {  margin-top : 40px; }
